assets/scss/style.scss
// TWEAKING

.va-unset {
    vertical-align: unset !important;
}

a {
    text-decoration: none !important;
}

img, svg {
    vertical-align: text-top;
}

:focus, button {
    outline: none !important;
    box-shadow: none !important;
}

.btn-transparent {
    border: none !important;
}

.list-inline, .breadcrumb {
    margin-bottom: 0.5rem;
}

// BLOG

.card-img-top {
    max-height: 275px;
}

figure {
    img {
        max-width: 100%;
        max-height: 500px;
    }
}

.card-footer .list-inline {
    margin-bottom: 0;
}

// MARKDOWN

.highlight {
    /* width */
    ::-webkit-scrollbar {
        height: 5px;
    }

    /* Track */
    ::-webkit-scrollbar-track {
        background: transparent;
    }

    /* Handle */
    ::-webkit-scrollbar-thumb {
        background: lightgrey;
        border-radius: 7.5px;
    }

    /* Handle on hover */
    ::-webkit-scrollbar-thumb:hover {
        background: lightgrey;
    }

    position: relative;

    &:hover {
        .btn-copy {
            display: block;
        }
    }

    .btn-copy {
        &.to-copy {
            background-image: url("data:image/svg+xml, %3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='white' class='bi bi-clipboard' viewBox='0 0 16 16'%3E%3Cpath d='M4 1.5H3a2 2 0 0 0-2 2V14a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V3.5a2 2 0 0 0-2-2h-1v1h1a1 1 0 0 1 1 1V14a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V3.5a1 1 0 0 1 1-1h1v-1z'/%3E%3Cpath d='M9.5 1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5h3zm-3-1A1.5 1.5 0 0 0 5 1.5v1A1.5 1.5 0 0 0 6.5 4h3A1.5 1.5 0 0 0 11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3z'/%3E%3C/svg%3E");
        }
        &.not-copied {
            background-image: url("data:image/svg+xml, %3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='white' class='bi bi-x-lg' viewBox='0 0 16 16'%3E%3Cpath d='M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8 2.146 2.854Z'/%3E%3C/svg%3E");
        }
        &.copied {
            background-image: url("data:image/svg+xml, %3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='white' class='bi bi-check-lg' viewBox='0 0 16 16'%3E%3Cpath d='M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425a.247.247 0 0 1 .02-.022Z'/%3E%3C/svg%3E");
        }

        display: none;

        background-size: 16px;
        height: 20px;
        transition: ease-in-out 0.2s;

        background-repeat: no-repeat;
        background-position: center;

        position: absolute;
        top: 7.5px;
        right: 7.5px;
    }

    pre {
        border-radius: 7.5px;
        background-color: black;
        padding: 20px;
    }
}

// MENU

.bottom {
    position: fixed;
    z-index: 3;
    bottom: calc(var(--bs-gutter-x)* .5);
}

#btn-menu-nav {
    border: none;
    padding: 0.5rem;
}

.dropdown-menu-nav {
    display: block;
    position: relative;

    .dropdown-item.on {
        font-weight: 600;
    }
}

// SCROLLTOP

.bottom-scrolltop {
    @extend .bottom;
    bottom: calc(var(--bs-gutter-x)* 2.75);
    padding: 0 0.475rem;
}

#btn-scrolltop {
    padding: 0.1rem;
}

// DARK MODE

[data-bs-theme="dark"] {
    .carousel-indicators>button {
        background-color: #ffff !important;
    }

    .carousel-dark .carousel-control-next-icon, .carousel-dark .carousel-control-prev-icon {
        filter: invert(0) grayscale(100) !important;
    }
}

.nav-link, .no-transition {
    transition: none !important; // remove animation to avoid theming transition weird behavior
}

// ANIMATIONS

.zoom {
    transition: transform .3s;
    &:hover {
        transform: scale(1.025);
    }
}

